# aide

./: rustc-ice-2025-10-27T12_02_46-94761.txt
crates/aide/: Cargo.toml
crates/aide-macros/: Cargo.toml
crates/aide/src/: generate.rs
crates/aide/src/axum/: mod.rs
examples/example-axum/: Cargo.toml
examples/example-axum-worker/: Cargo.toml
