[package]
name = "aide-macros"
version = "0.15.0" # remember to update the dependency in aide, even for patch releases
authors = ["tamasfe"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros for the Aide library"

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
quote = "1.0.42"
syn = "2.0.109"
proc-macro2 = "1.0"

[features]
axum-extra-typed-routing = []
