[package]
name = "example-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aide = { path = "../../crates/aide", features = [
    "redoc",
    "swagger",
    "scalar",
    "axum-json",
    "macros",
] }
axum = { version = "0.8.7", features = ["macros"] }
schemars = { version = "1.1.0", features = ["uuid1"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
